get vue working

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "blackcoffee": "^0.1.5",
     "coffee-loader": "^0.7.3",
     "coffee-script": "^1.12.4",
-    "coffeescript": "^2.0.0-alpha1",
     "express": "^4.15.2",
+    "jquery": "^3.1.1",
     "slim-lang-loader": "0.0.3",
+    "vue": "^2.2.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
