--- a/server/Gemfile
+++ b/server/Gemfile
@@ -8,3 +8,7 @@ gem "thin"
 gem 'rerun'
 gem "sass"
 gem 'coffee-script'
+gem 'sinatra_auth_github'
+gem 'dotenv'
+gem 'sinatra-cross_origin'
+gem "rack-proxy"
