--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "coffee-loader": "^0.7.3",
     "coffee-script": "^1.12.4",
     "coffeescript": "^2.0.0-alpha1",
+    "cookies-js": "^1.2.3",
     "css-loader": "^0.26.4",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
