setup server for deploy and do a little more client config

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -9,6 +9,11 @@ gem 'dotenv'
 gem 'sinatra-cross_origin'
 gem "rack-proxy"
 gem "sinatra-activerecord"
-gem "sqlite3"
+group :development do
+  gem "sqlite3"
+end
+group :production do
+  gem 'pg'
+end
 gem "rake"
 gem 'activesupport'
